https://trello.com/c/s7xdTBGz/494-ui-header: Ensure height of collapsed menu aligned with LHS.

--- a/ckanext/bpatheme/fanstatic/styles/bpatheme.css
+++ b/ckanext/bpatheme/fanstatic/styles/bpatheme.css
@@ -134,7 +134,7 @@ img#beta {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .dwga-header-row > div{
